fix: login alert close button wrong position; fix: dashboard search bar too long (adjust width for better layout)

--- a/frontend/src/components/ui/ui.css
+++ b/frontend/src/components/ui/ui.css
@@ -124,7 +124,8 @@
 }
 
 .dashboard-list-card .search-bar {
-  width: calc(100% - 44px);
+  /* width: calc(100% - 44px); */
+  width: calc(100% - 72px);
   margin: 0 22px 10px;
 }
 
